force-app/main/default/objects/Survey__c/fields/Already_Submitted_Message__c.field-meta.xml
<CustomField>
    <fullName>Already_Submitted_Message__c</fullName>
    <description>Message to be displayed when a survey has already been submitted</description>
    <inlineHelpText>Message to be displayed when a survey has already been submitted</inlineHelpText>
    <label>Already Submitted Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>