force-app/main/default/objects/Survey__c/fields/Share_with_Guest_User__c.field-meta.xml
<CustomField>
    <fullName>Share_with_Guest_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create a sharing setting to share surveys with this field checked with Guest Users.</description>
    <inlineHelpText>Create a sharing setting to share surveys with this field checked with Guest Users.</inlineHelpText>
    <label>Publicly Available</label>
    <type>Checkbox</type>
</CustomField>