force-app/main/default/objects/Survey__c/fields/Survey_Expiration_Message__c.field-meta.xml
<CustomField>
    <fullName>Survey_Expiration_Message__c</fullName>
    <description>Message to be displayed when a survey has expired</description>
    <inlineHelpText>Message to be displayed when a survey has expired</inlineHelpText>
    <label>Survey Expiration Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>