force-app/main/default/objects/Survey__c/fields/Survey_Header__c.field-meta.xml
<CustomField>
    <fullName>Survey_Header__c</fullName>
    <label>Survey Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>