force-app/main/default/objects/Survey__c/fields/Survey_Subheader__c.field-meta.xml
<CustomField>
    <fullName>Survey_Subheader__c</fullName>
    <label>Survey Subheader</label>
    <length>255</length>
    <type>TextArea</type>
</CustomField>